<resources>
    <string name="app_name">Atlas</string>

    <string name="asking_for_login">Already have an account? Login here.</string>
    <string name="asking_for_sign_up">Don\'t have an account? Sign up here.</string>
    <string name="name">Name</string>

    <string name="cook">Cook</string>
    <string name="maid">Maid</string>
    <string name="driver">Driver</string>
    <string name="daily_wager">Daily Wager</string>
    <string name="babysitter">Babysitter</string>
    <string name="tutor">Tutor</string>

    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="gender_female">F</string>
    <string name="gender_male">M</string>

    <string name="vehicle_owned_no">No</string>
    <string name="vehicle_owned_yes">Yes</string>

    <string name="service_provider">ServiceProvider</string>
    <string name="service_receiver">ServiceReceiver</string>
    <string name="user">User</string>

    <string name="profile">Profile</string>

    <string name="preferences">Preferences</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>

    <string name="useful_corner">Useful Corner</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="chat_room_id">chat id</string>
    <string name="chatrooms">Chatroom</string>
    <string name="messages">Message</string>

    <string name="starred_service_provider">StarredServiceProvider</string>
    <string name="starred_service_receiver">StarredServiceReceiver</string>

    <string name="experience">experience</string>
    <string name="wage">expectedWage</string>

    <string name="gender">Gender</string>
    <string name="speciality">Speciality</string>

    <string name="filter_by_gender">filter_by_gender</string>
    <string name="filter_by_speciality">filter_by_speciality</string>

    <string name="gender_male_label">Male</string>
    <string name="gender_female_label">Female</string>
    <string name="asking_for_login_with_phone">Sign in with Phone Number.</string>
</resources>